--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.kurento</groupId>
-	<version>3.0.6-SNAPSHOT</version>
+	<version>3.0.7-SNAPSHOT</version>
 	<artifactId>kmf-parent-pom</artifactId>
 	<packaging>pom</packaging>
 
 	<name>Kurento Application Server Parent POM</name>
 	<description>Parent POM for KAS projects. Provides default project build configuration.</description>
-	<url>https://github.com/Kurento</url>
+	<url>http://www.kurento.com/docs/${project.artifactId}/${project.version}</url>
 
 	<issueManagement>
 		<system>Redmine</system>
@@ -66,18 +65,20 @@
 		<!-- ********************* -->
 		<!-- Dependencies versions -->
 		<!-- ********************* -->
-		<kmf-media-api.version>3.0.6-SNAPSHOT</kmf-media-api.version>
-		<kmf-jsonrpcconnector.version>0.5.0-SNAPSHOT</kmf-jsonrpcconnector.version>
-		<kmf-thrift-interface.version>1.0.0-SNAPSHOT</kmf-thrift-interface.version>
-		<kms-interface.version>3.0.6-SNAPSHOT</kms-interface.version>
-		<kmf-commons.version>3.0.5</kmf-commons.version>
-		<kmf-content-api.version>3.0.7-SNAPSHOT</kmf-content-api.version>
-		<kms-interface.version>3.0.6-2-SNAPSHOT</kms-interface.version>
-		<kmf-spring.version>1.0.2-SNAPSHOT</kmf-spring.version>
-		<kmf-content-protocol.version>3.0.6-SNAPSHOT</kmf-content-protocol.version>
-		<kmf-repository-api.version>3.0.7-SNAPSHOT</kmf-repository-api.version>
-		<kws-content-api.version>1.0.2-SNAPSHOT</kws-content-api.version>
+		<kmf-media-api.version>${project.version}</kmf-media-api.version>
+		<kmf-jsonrpcconnector.version>${project.version}</kmf-jsonrpcconnector.version>
+		<kmf-thrift-interface.version>${project.version}</kmf-thrift-interface.version>
+		<kms-interface.version>${project.version}</kms-interface.version>
+		<kmf-commons.version>${project.version}</kmf-commons.version>
+		<kmf-content-api.version>${project.version}</kmf-content-api.version>
+		<kmf-spring.version>${project.version}</kmf-spring.version>
+		<kmf-content-protocol.version>${project.version}</kmf-content-protocol.version>
+		<kmf-repository-api.version>${project.version}</kmf-repository-api.version>
+		<kmf-media-connector.version>${project.version}</kmf-media-connector.version>
+		<kws-content-api.version>${project.version}</kws-content-api.version>
+		<kms-interface.version>${project.version}</kms-interface.version>
 
+		<libthrift.version>0.9.0</libthrift.version>
 		<gson.version>2.2.4</gson.version>
 		<servlet-api.version>3.0.1</servlet-api.version>
 		<reflections.version>0.9.9-RC1</reflections.version>
@@ -299,7 +300,11 @@
 				<artifactId>spring-websocket</artifactId>
 				<version>${spring-websocket.version}</version>
 			</dependency>
-
+			<dependency>
+				<groupId>org.apache.thrift</groupId>
+				<artifactId>libthrift</artifactId>
+				<version>${libthrift.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>org.apache.httpcomponents</groupId>
 				<artifactId>fluent-hc</artifactId>
